News UAT/force-app/main/default/objects/Actions__c/Actions__c.object-meta.xml
<CustomObject>
    <label>Action</label>
    <nameField>
        <displayFormat>A-{0}</displayFormat>
        <label>Action No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>