News UAT/force-app/main/default/objects/Actions__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <label>Assigned To</label>
    <length>125</length>
    <type>Text</type>
</CustomField>