News UAT/force-app/main/default/objects/Actions__c/fields/Date_Due_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Due_Closed__c</fullName>
    <label>Date Due/Closed</label>
    <type>Date</type>
</CustomField>