News UAT/force-app/main/default/objects/Actions__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <label>Item</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Activity Assignment</fullName>
            </value>
            <value>
                <fullName>Activity Closure</fullName>
            </value>
            <value>
                <fullName>API Knowledge Transfer</fullName>
            </value>
            <value>
                <fullName>Campaigns</fullName>
            </value>
            <value>
                <fullName>Contracts &amp; Orders</fullName>
            </value>
            <value>
                <fullName>Creating Activities</fullName>
            </value>
            <value>
                <fullName>Dashboards</fullName>
            </value>
            <value>
                <fullName>Data Migration Test File</fullName>
            </value>
            <value>
                <fullName>Date Created Fields</fullName>
            </value>
            <value>
                <fullName>Design Progress</fullName>
            </value>
            <value>
                <fullName>Inactive Users</fullName>
            </value>
            <value>
                <fullName>Knowledge Transfer</fullName>
            </value>
            <value>
                <fullName>Legacy Systems</fullName>
            </value>
            <value>
                <fullName>Mailing List</fullName>
            </value>
            <value>
                <fullName>Project Plan</fullName>
            </value>
            <value>
                <fullName>QTC Interface</fullName>
            </value>
            <value>
                <fullName>Risks</fullName>
            </value>
            <value>
                <fullName>Search &amp; Replace</fullName>
            </value>
            <value>
                <fullName>SOW Invoice</fullName>
            </value>
            <value>
                <fullName>Task Console</fullName>
            </value>
            <value>
                <fullName>Technical Contact</fullName>
            </value>
            <value>
                <fullName>Translation Workbench</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>