News UAT/force-app/main/default/objects/Actions__c/fields/Project_Overview__c.field-meta.xml
<CustomField>
    <fullName>Project_Overview__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>To what Project is the Action related</inlineHelpText>
    <label>Project Overview</label>
    <referenceTo>Project_Overview__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>