News UAT/force-app/main/default/objects/Actions__c/fields/Resolution_Comments__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Comments__c</fullName>
    <label>Resolution/Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>